kube/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dp-limesurvey
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: dp-limesurvey
    spec:
      containers:
      - name: dp-survey
        image: quay.io/ukhomeofficedigital/dp-limesurvey:latest
        ports:
          - containerPort: 10080
        volumeMounts:
        - mountPath: /var/www/html/tmp
          name: survey-tmp
        - mountPath: /var/www/html/upload
          name: survey-upload
        - mountPath: /var/www/html/application/config
          name: survey-config
        - mountPath: /certs
          name: certs
      volumes:
      - name: survey-tmp
        hostPath:
          path: /tmp/survey-tmp
      - name: survey-upload
        hostPath:
          path: /tmp/survey-upload
      - name: survey-config
        hostPath:
          path: /tmp/survey-config
      - name: certs
        hostPath:
          path: /tmp/certs
