kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dp-limesurvey-service
  name: dp-limesurvey-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: dp-limesurvey
